Refactored and commented on code.

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     </template>
     <!--     Dashboard -->
     <template id="dashboard">
-     <section>
+     <section class="dashbord-logout">
         <h2 data-bind="user"></h2>
         <a href="/login" onclick="onLinkClick(event)">Logout</a>
      </section>
